<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- 版本更新 -->
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗?</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>

    <!-- startActivity -->
	<string name="common_text"> 长春雨山租赁有限公司</string> 	
    <string name="pay_status">等待支付</string>
    <string name="cancel_order">取消订单</string>
    <string name="sublit_order">一键支付</string>

	<!-- 车辆违章 -->	   
    <string name="csy_form_tip">目前仅支持小型汽车查询</string>
    <string name="csy_btn_query">开始查询</string>    
    <string name="csy_cxdz_lab">查询地</string>
    <string name="csy_cxdz_tip">请选择查询地</string>    
    <string name="csy_chepai_lab">车牌号</string>
    <string name="csy_chepai_tip">请输入车牌号后6位</string>
    <string name="csy_chejia_lab">车架号</string>    
    <string name="csy_engine_lab">发动机号</string>
    <string name="weizhang_lab">违章查询</string>
    
    <string name="csy_close">关闭</string>	
	   
    <string name="wemall_useraddress">欢迎您,新用户,请点击这里设置您的收获地址</string>
    <string name="wemall_usercentername">远程拼车</string>
    <string name="new_version">版本升级</string>    
    <string name="app_name">长途拼车</string>
    <string name="hello_world">你好</string>
    <string name="action_settings">设置</string>
    <string name="wemall_type_good">现在用车</string>
    <string name="wemall_type_cart">预约租车</string>
    <string name="wemall_type_user">个人中心</string>
    <string name="wemall_allgood">全部商品</string>
    <string name="real_tx">现\n在\n用\n车</string>
    <string name="call_tx">免\n费\n预\n约</string>
    <string name="weizhang_tx">违章查询</string>
    <string name="use_tx">使用帮助</string>
    <string name="update_tx">应用更新</string>
    <string name="about_tx">关于</string>        
    <string name="city_name_from">从哪出发</string>
    <string name="city_name_go">到哪儿去</string>
    <string name="city_pay">实时路费:</string>
    <string name="time_from_go">什么时候出发</string>
    <string name="read_desc">请仔细阅读如下条款</string>
        
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉载入更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="agreement_desc">\t提醒：本程序是一款远程拼车软件，使用本程序即同意如下条款。
        \n1、服务修订
		\n本程序所有者保留随时修改或中断服务而不需通知用户的权利。 
		\n2、用户隐私制度
		\n尊重用户个人隐私是本公司的一项基本政策。本公司一定不会在用户不允许的情况下公开、或透露用户的注册资料。 
		\n3、用户的帐号、密码和安全性
		\n如果您未保管好自己的帐号和密码而对您或第三方造成的损害，责任由用户个人承担。 
		\n4、拒绝提供担保和免责声明
		\n用户明确同意使用本项服务的风险由用户个人承担。服务提供是建立在免费的基础上。本公司不提供任何类型的担保。 
		\n5、用户管理
		\n用户单独承担发布内容的责任。用户对服务的使用是根据所有适用于服务的地方法律、国家法律和国际法律标准的。
		\n6、通告
		\n所有发给用户的通告都可通过电子邮件或常规的信件传送。  
    </string>    
    
    <!-- 请替换成在语音云官网申请的appid -->
    <string name="app_id">5508d678</string>    
    <string name="day_name_format">EEE</string>
   <string name="invalid_date">时间范围必须在 %1$s and %2$s.</string>
   <string name="month_name_format">MMMM yyyy</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string formatted="false" name="tts_toast_format">缓冲进度为%d%%，播放进度为%d%%</string>

    <!-- 语言 -->
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>河南话</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>henanese</item>
        <item>en_us</item>
    </string-array>
    <!-- 标点符号 -->
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string name="pref_title_iat_show">显示听写界面</string>
    
    <string name="wemall_regist_btn_text">一 键 登 陆</string>
    <string name="wemall_exit">退出应用</string>
    <string name="wemall_about">关于应用</string>
    <string name="wemall_ok">确定</string>
    <string name="wemall_cancel">取消</string>
    <string name="wemall_back">返回</string>   
    <string name="wemall_gpl">使用许可</string>
    <string name="wemall_login_account">帐号</string>
    <string name="wemall_login_account_hint">请输入手机号</string>
    <string name="wemall_version">1.0</string>   
    <string name="wemall_ordercenter">订单中心</string>
    <string name="wemall_usercenterpurse">我的钱包</string>
    <string name="wemall_usercenterclean">清理缓存</string>
    <string name="wemall_usercenterlogout">注销账户</string>
    <string name="wemall_usercenterchangepasswd">修改密码</string>
    <string name="wemall_usercentercollect">收藏中心</string>
    <string name="wemall_regist_name">用&#160;&#160;户&#160;&#160;名</string>
    <string name="wemall_car_name">身&#160;&#160;份&#160;&#160;证</string>    
    <string name="wemall_regist_name_hint">请输入真实姓名</string>
    <string name="wemall_car_name_hint">请输入身份证号</string>
    
    <string name="wemall_regist_phone">手&#160;&#160;机&#160;&#160;号</string>
    <string name="wemall_regist_phone_hint">请输入手机号</string>
    <string name="wemall_regist_passwd">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码</string>
    <string name="wemall_regist_passwd_hint">请输入密码,至少六位</string>
    <string name="wemall_regist_passwd_repeat">重复密码</string>
    <string name="wemall_regist_passwd_repeat_hint">重复密码</string>
    <string name="wemall_one_key_regist">一键注册</string>
    <string name="wemall_one_key_login">一键登录</string>
    <string name="wemall_regist_clause_t">同意</string>
    <string name="wemall_regist_clause">用户使用条款</string>
    <string name="wemall_one_key_regist2">注册</string>
    <string name="wemall_forgetpasswd">忘记密码</string>
    <string name="wemall_login_passwd">密码</string>
    <string name="wemall_login_passwd_hint">请输入密码</string>
    <string name="wemall_changepasswd_old">当前密码</string>
    <string name="wemall_changepasswd_new">新&#160;&#160;密&#160;&#160;码</string>
    <string name="wemall_changepasswd_button">修改密码</string>
    <string name="wemall_recoverypasswd_button">重置密码</string>
    <string name="wemall_changepasswd_old_hint">请输入当前密码</string>
    <string name="wemall_changepasswd_new_hint">请输入新的密码</string>
    <string name="wemall_changepasswd_new_re_hint">请重复新的密码</string>
    <string name="wemall_neterrtip">网络好像不通，请稍后再试</string>
    <string name="wemall_versiontop">当前版本为最新版，请放心使用</string>
    <string name="wemall_downloading">正在下载升级包，下载完毕将会自动安装，请稍侯......</string>   
    <string name="ystaxi_gpl">使用程序需要严格遵守相关法律法规,不可以用于其它不正当的活动</string>   
    
    <!-- 对话框 -->
    <string name="prompt">提示</string>
    <string name="exit_app">你确定要退出应用吗?</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="dismiss">隐藏</string>
    
</resources>
