<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="horizontal"> 
    
    <Button 
        android:id="@+id/real_btn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:textColor="@color/white_ffffff"
        android:textSize="30sp"
        android:text="@string/real_tx"
        android:background="@drawable/green_btn"/>
    
    <Button 
        android:id="@+id/call_btn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"        
        android:layout_marginRight="3dp"
        android:gravity="center"
        android:textColor="@color/white_ffffff"
        android:textSize="30sp"
        android:text="@string/call_tx"        
        android:background="@drawable/yellow_btn"/>
    
    </LinearLayout> 
    
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="0.4"
    android:orientation="horizontal"> 
    
    <Button 
        android:id="@+id/wz_btn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:textColor="@color/white_ffffff"
        android:textSize="30sp"
        android:text="@string/weizhang_tx"
        android:background="@drawable/pink_btn"/>
    
    <Button 
        android:id="@+id/about_btn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"        
        android:layout_marginRight="3dp"
        android:gravity="center"
        android:textColor="@color/white_ffffff"
        android:textSize="30sp"
        android:text="@string/about_tx"        
        android:background="@drawable/blue_btn"/>
    
    </LinearLayout>  
    
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="0.6"
    android:orientation="horizontal"> 
    
    <Button 
        android:id="@+id/use_btn"
        android:layout_marginBottom="3dp"        
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:textColor="@color/white_ffffff"
        android:textSize="30sp"
        android:text="@string/use_tx"
        android:background="@drawable/zgreen_btn"/>
    
    </LinearLayout>  
    

<!--     <LinearLayout
        android:id="@+id/real_layout"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:background="@color/loadcplor" 
        android:orientation="vertical">
        
     	<TextView
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_gravity="center"
		   android:gravity="center"
           android:textColor="@color/white_ffffff"
           android:textSize="30sp"
           android:text="@string/real_tx" />
     	    	
    </LinearLayout>

    <LinearLayout
        android:id="@+id/call_layout"        
        android:layout_width="0dp"
        android:layout_weight="1"       
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:background="@color/callcol"         
        android:orientation="vertical">
     	
       <TextView
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_gravity="center"
		   android:gravity="center"
           android:textColor="@color/white_ffffff"
           android:textSize="30sp"
           android:text="@string/call_tx" />
        
    </LinearLayout> -->

</LinearLayout>
